[workspace]
members = ["contracts/invoice", "contracts/treasury", "contracts/compliance"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/dreamgeneX/COMEBACKHERE"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0" }
stellar-xdr = "0.0.18"
derive_arbitrary = "=1.3.2"
