[package]
name = "comebackhere-compliance"
version = "1.0.0"
edition = "2021"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "compliance"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
