[package]
name = "comebackhere-invoice"
version = "1.0.0"
edition = "2021"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "invoice"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
hex = "0.4"
soroban-sdk = { workspace = true, features = ["testutils"] }
