[package]
name = "comebackhere-treasury"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "treasury"

[features]
default = ["testutils"]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
derive_arbitrary.workspace = true
soroban-sdk = { workspace = true, features = ["testutils"] }
compliance = { package = "comebackhere-compliance", path = "../compliance" }
invoice = { package = "comebackhere-invoice", path = "../invoice" }
