[package]
name = "comebackhere-treasury"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "treasury"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk.workspace = true
multisig = { package = "comebackhere-multisig", path = "../../crates/multisig" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
compliance = { package = "comebackhere-compliance", path = "../compliance" }
invoice = { package = "comebackhere-invoice", path = "../invoice" }
