[package]
name = "comebackhere-protocol-errors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "protocol_errors"

[dependencies]
invoice    = { package = "comebackhere-invoice",    path = "../../contracts/invoice" }
treasury   = { package = "comebackhere-treasury",   path = "../../contracts/treasury" }
compliance = { package = "comebackhere-compliance", path = "../../contracts/compliance" }
